Fix example in man page

--- a/iniget.1
+++ b/iniget.1
@@ -151,8 +151,8 @@ Now, here are some commands and their outputs:
 4.95
 
 .B $ iniget file.ini '{str.ed} + {str.ed}' '{str.ed} * {nums.a}'
-ed is the standard editored is the standard editor
-ed is the standard editored is the standard editor
+ed is the standard text editored is the standard text editor
+ed is the standard text editored is the standard text editor
 
 .B $ cat file.ini | iniget - '{nums.a} % {nums.b}'
 0.52
