Tweak version display in man page
Now automatically substituted from Makefile.

--- a/iniget.1
+++ b/iniget.1
@@ -1,4 +1,4 @@
-.TH INIGET 1 "2021-04-14" "iniget.2c327c5" ""
+.TH INIGET 1 "2021-04-14" "iniget-VERSION" ""
 .SH NAME
 iniget - extract information from INI files
 .SH SYNOPSIS
